src/main/java/com/example/corebank/common/error/InsufficientFundsException.java
package com.example.corebank.common.error;

public class InsufficientFundsException extends RuntimeException {
    public InsufficientFundsException(String message) {
        super(message);
    }
}
